--- a/bio.html
+++ b/bio.html
@@ -61,7 +61,11 @@
 
 	<!--end of header section and beginning of individual page-->
 
-
+	<div class="top_photo_border"></div>
+		<div class="index_image">
+			<img src="">
+		</div>
+	<div class="bottom_photo_border"></div>
 
 	<!--copy this section for each page-->
 
