added new photo to bio page

--- a/bio.html
+++ b/bio.html
@@ -62,8 +62,8 @@
 	<!--end of header section and beginning of individual page-->
 
 	<div class="top_photo_border"></div>
-		<div class="index_image">
-			<img src="">
+		<div class="index_image_bio">
+			<img src="images/andrew_photo_bw.jpg">
 		</div>
 	<div class="bottom_photo_border"></div>
 
