created bio info on top of bio page

--- a/bio.html
+++ b/bio.html
@@ -63,13 +63,18 @@
 
 	<div class="top_photo_border"></div>
 		<div class="index_image_bio">
-			<img src="images/andrew_photo_bw.jpg">
+				<p>Andrew Wysong is a Philadelphia-area music producer, composer, engineer and musician.
+				His musical versatility has kept him in high demand as a producer, engineer, musician and composer. Andrew is also a graduate of Berklee College of Music, where he studied composition, music production, arranging, jazz guitar and bass. 
+				With close to a decade of studio experience he has worked on records featuring major label artists such as Snoop Dogg, as well as being a Billboard chart-topping remixer and engineer. He has had the pleasure of working on records with Grammy-nominated and Grammy Award-winning producers and songwriters. Additionally, he has been featured doing production, engineering, remix work and session playing for EMI publishing and Universal Music Group. Andrew's music has also been published by Universal/Polygram International.
+				Recently, he has been writing/composing music for TV. Credits include The History Channel, Fox, VH1, NatGeo, ACM, Fuel TV, Fox Sports, CBS, MTV, EPSN, TLC, Bravo, Fox, Discovery Investigation and The WE Network. Others credits include having music placed in commercials for 3M, Dairy Queen, and SeanJohn.
+				As a well-rounded guitarist, bassist and keyboardist, Andrew has had the opportunity to share the stage with Biz Markee, Bad Fish, State Radio, Chiddy Bang, Freeway and Snoop Dogg, just to name a few.
+			</div>
 		</div>
-	<div class="bottom_photo_border"></div>
+	<div class="bottom_photo_border bottom_photo_border_bio"></div>
 
 	<!--copy this section for each page-->
 
-	<section class="site_links_row">
+	<section class="site_links_row site_links_row_bio">
 		<section class="site_links_credit">
 			<h2>Credits</h2>
 				<img src="">
