--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,7 @@
 					<li>
 						<a href="#">Music</a>
 							<ul class="sub_music_menu">
-								<li><a href="#">Remixes</a></li>
-								<li><a href="#">Original</a></li>
+								<li><a href="#">Originals</a></li>
 								<li><a href="#">TV/Film</a></li>
 								<li><a href="#">Videos</a></li>
 							</ul>
