--- a/bio.html
+++ b/bio.html
@@ -21,12 +21,13 @@
 						<a href="#">Bio</a>
 					</li>
 					<li>
-						<a href="#">Music</a>
+						<a href="#">Listen</a>
 							<ul class="sub_music_menu">
 								<li><a href="#">Originals</a></li>
 								<li><a href="#">TV/Film</a></li>
 							</ul>
 					</li>	
+					<li><a href="#">Credits</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
@@ -43,8 +44,9 @@
 					<li class="js_click_banner">CLOSE</li>
 					<li>HOME</li>
 					<li>BIO</li>
-					<li>MUSIC/ORIGINAL</li>
-					<li>MUSIC/TV + FILM</li>
+					<li>LISTEN/ORIGINAL</li>
+					<li>LISTEN/TV + FILM</li>
+					<li>CREDITS</li>
 					<li>CONTACT</li>
 				</ul>
 			</nav>
@@ -76,32 +78,6 @@
 	</div>
 	<div class="container">
 		<div class="bottom_photo_border_bio"></div>
-
-		<!--copy this section for each page-->
-
-		<section class="site_links_row_bio">
-			<section class="site_links_credit">
-				<h2>Credits</h2>
-					<img src="">
-
-			</section>
-			<section class="site_links_listen_to_tracks">
-				<h2>Listen to Tracks</h2>
-					<img src="">
-
-			</section>
-			<section class="site_links_contact">
-				<h2>Contact</h2>
-					<img src="">
-
-			</section>
-		</section>
-
-		<section class="site_links_list">
-			<li><img src="">Credits</li>
-			<li><img src="">Listen to Tracks</li>
-			<li><img src="">Contact</li>
-		</section>
 
 		<footer class="site_footer_950px">
 			<p>Proudly Powered by WordPress</p>
