--- a/bio.html
+++ b/bio.html
@@ -17,7 +17,7 @@
 					<li>
 						<a href="#">Home</a>
 					</li>
-					<li>
+					<li class="active">
 						<a href="#">Bio</a>
 					</li>
 					<li>
