--- a/bio.html
+++ b/bio.html
@@ -72,6 +72,9 @@
 			<br>
 			As a well-rounded guitarist, bassist and keyboardist, Andrew has had the opportunity to share the stage with Biz Markee, Bad Fish, State Radio, Chiddy Bang, Freeway and Snoop Dogg, just to name a few.
 			</div>
+			
+		<!--copy this section for each page-->
+
 		<footer class="site_footer_950px">
 			<p>Proudly Powered by WordPress</p>
 			<p>Wysong Music Theme</p>
